testing/tests/ui/excessive_nesting.stderr
error: problems parsing template source at row 14, column 34 near:
       "%}{%if 1%}{%if 1%}{%if 1%}{%if 1%}{%if 1"...
 --> tests/ui/excessive_nesting.rs:3:10
  |
3 | #[derive(Template)]
  |          ^^^^^^^^
  |
  = note: this error originates in the derive macro `Template` (in Nightly builds, run with -Z macro-backtrace for more info)
